--- a/src/components/DetailsModal.css
+++ b/src/components/DetailsModal.css
@@ -10,7 +10,6 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    width: 400px;
     background-color: #fff;
   }
   
@@ -21,13 +20,16 @@
   
   h3 {
     margin-bottom: 10px;
-    color: #333; /* Dark text color for headings */
+    color: black; /* Dark text color for headings */
   }
   
-  p {
-    margin-bottom: 15px;
-    color: #555; /* Slightly lighter text color for paragraphs */
+  .detail-description {
+    margin-bottom: 18px;
+    color: black;
+    white-space: pre-wrap;
   }
+  
+   
   
   button {
     padding: 10px 15px;
