--- a/src/components/AddTaskModal.css
+++ b/src/components/AddTaskModal.css
@@ -64,7 +64,7 @@ input[type="date"] {
 
   /* Style for the create task button */
 .create-task {
-    background-color: #4caf50; /* Set background color */
+    background-color: #0b222c; /* Set background color */
     color: #fff; /* Set text color */
     padding: 10px 20px; /* Adjust padding as needed */
     font-size: 16px; /* Adjust font size as needed */
@@ -77,7 +77,7 @@ input[type="date"] {
   
   /* Hover effect */
   .create-task:hover {
-    background-color: #45a049; /* Change background color on hover */
+    background-color: #112b36; /* Change background color on hover */
   }
   
 
