--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: 250px;
-    margin-top: 8%;
+    margin-top: 15px;
 }
 
 .floating-container{
@@ -11,7 +11,7 @@
     height: 100px;
     bottom: 0;
     right: 0;
-    margin: 35px 25px;
+    margin: 35px 6px;
 }
 
 .floating-container:hover{
@@ -19,7 +19,7 @@
 }
 
 .floating-container:hover .floating-button{
-    box-shadow: 0 10px 25px rgba(44, 179, 240, 0.6);
+    box-shadow: 0 10px 25px rgba(11, 34, 44, 0.6);
     transform: translatey(5px);
     transition: all 0.3s;
 }
@@ -28,7 +28,6 @@
     position: absolute;
     width: 65px;
     height: 65px;
-    background-color: #4caf50;
     border-radius: 50%;
     bottom: 0;
     right: 0;
@@ -38,7 +37,8 @@
     text-align: center;
     font-size: 23px;
     z-index: 10;
-    box-shadow: 0 10px 25px rgba(44, 179, 240, 0.3);
+    box-shadow: 0 10px 25px rgba(11, 34, 44, 0.3);
     cursor: pointer;   
     border: none;
+    background-color: #0b222c;
 }
