--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -60,3 +60,20 @@
     font-size: x-large;
 
   }
+
+  @media screen and (max-width: 600px) {
+    .sidebar-container {
+      display: none;
+    }
+
+    .floating-button{
+        background-color: rgba(11, 34, 44, 0.6);
+    }
+
+    .cards{
+      margin-top: 100px;
+      display: flex;
+      margin-left: 50px;
+      align-items: center;
+    }
+  }
